<?xml version="1.0"?>
<package format="2">
    <name>VoxelmapDemos</name>
    <version>1.0.0</version>
    <description>Demo of the perception-voxelmap VoxelmapDemos package.</description>

    <maintainer email="wookjinahn5@pusan.ac.kr">wj</maintainer>
    <license>TODO</license>
    <url type="website">TODO</url>

    <buildtool_depend>catkin</buildtool_depend>

</package>
